kustomize/overlays/production/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  template:
    spec:
      containers:
      - name: mongo
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume-data
      volumes:
      - name: mongo-volume-data
        hostPath:
          path: /data/mongo/data
          type: Directory
