kustomize/overlays/production/eventstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventstore
spec:
  ports:
  - name: http
    port: 2113
    targetPort: 2113
  - name: tcp
    port: 1113
    targetPort: 1113
