kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fbapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: fbapp-proxy
            port:
              number: 80
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: fbapp-proxy
            port:
              number: 80
        path: /connect/
        pathType: Prefix
      - backend:
          service:
            name: fbapp-proxy
            port:
              number: 80
        path: /.well-known/
        pathType: Prefix
      - backend:
          service:
            name: fbapp-web
            port:
              number: 80
        path: /
        pathType: Prefix
